Fix question of the day copy as per product feedback

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -332,7 +332,7 @@ tutoring_request_info_dialog:
   schedule_a_meeting: Schedule a Free Consultation
 question_of_the_day:
   skip: Skip
-  heading: What time do you normally start studying?
+  heading: What time do you normally study?
   subheading: Practice makes perfect. We can send you daily questions to help you prepare more effectively.
   morning: Morning
   noon: Noon
