Add the relevant loading and empty states into the app except for the learn screen because it's tedious and has it's own functioning mechanism right now

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -390,3 +390,8 @@ old_user_onboarding:
   tailor: "tailor "
   your: "your "
   learning: "learning"
+
+empty_state:
+  title: "Oops!"
+  message: "We were unable to load your updates.\n\n Please try again when you have a valid internet connection."
+  button: "Try Again"
