Cleanup issues with notification presentation

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -314,7 +314,7 @@ tutoring_modal:
   request_dialog_button: Give us a call (617) 299-2601
 tutoring_sliders:
   qualifier: I'm Taking the MCAT Within a Year
-  slider_one_header: 12 Point Score Improvement
+  slider_one_header: 12 POINT SCORE IMPROVEMENT
   slider_one_description: On average, the student part of our tutoring program score 12 points higher than their previous exam scores.
   slider_two_header: COMPLETELY PERSONALIZED
   slider_two_description: Our MCAT tutoring is completly personalized to you. From day one, we’ll work on indentifying your goals, your strengths and your weaknesses so that we can tailor the most effective program possible.
