Reset course progress when making changes which will impact this so we refresh accordingly

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -375,7 +375,7 @@ progress_screen:
   flashcards: Flashcards
   goto_question_bank: Go to Question Bank
   goto_flashcards: Go to Flashcards
-  no_progress: You haven't made any progress yet
+  no_progress: You haven't made enough progress yet
   get_started: Get Started
 
 upsell_banner:
