1.) Add relevant analytics and fix strings warnings in console 2.) Fix busted spinner for QOTD on Android 3.) Fix going back from onboarding and setting test date 4.) Tweak flashcards so flipping excessively does not distort them

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -376,6 +376,10 @@ progress_screen:
   goto_question_bank: Go to Question Bank
   goto_flashcards: Go to Flashcards
   no_progress: You haven't made enough progress yet
+  no_flashcards: You haven't completed any flashcards yet
+  no_questions: You haven't completed any questions yet
+  see_questions: See Questions
+  try_flashcards: Try Flashcards
   get_started: Get Started
 
 upsell_banner:
