--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -196,8 +196,8 @@ question_screen:
   no_flagged_questions: No flagged questions yet
   questions_count: "{number} questions"
   question_index: "Question {index}"
-  your_answer: • Your answer
-  correct_answer: • Correct answer
+  your_answer: Your answer
+  correct_answer: Correct answer
   other_users_percentage: "{percentage}% of all users answered this question correctly"
 premium_modal:
   description: We are hard at work building some awesome new features. Stay tuned!
