Loading issue with no data
- Handle loader for Schedule Test & Time per day

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -10,6 +10,7 @@ general:
   save: Save
   next: Next
   remove: Remove
+  net_error : Something went wrong, please try again and make sure your internet is active
 common:
   tutoring: Tutoring
   premium: Premium
