- removed APN support for IOS - IOS version bump - removed bottom navbar on whiteboard & lecture notes - fixed spinner location on whiteboard & lecture notes - vertical margin in upsell banner - QOTD prevent change when saving - progress : pin banner to top, expand view for scroller - change placeholder in progress with png - add subjectname to navigation from premium user flashcard > flashcard - noprogress : change icon with image

--- a/assets/i18n/en_US.yaml
+++ b/assets/i18n/en_US.yaml
@@ -401,7 +401,7 @@ progress_screen:
   try_flashcards: Try Flashcards
   get_started: Get Started
   tutor_button : Learn More
-  tutor_title : Get help from a Tutor
+  tutor_title : Get Help From A Tutor
   tutor_content : Need 1-1 time with 99th percentile tutors?
 
 learn_screen :
